src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Action_Items__c</fullName>
        <inlineHelpText>Add any action items that will require follow up.</inlineHelpText>
        <label>Action Items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Category__c</fullName>
        <label>Activity Category</label>
        <picklist>
            <controllingField>Activity_Type__c</controllingField>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Completed_Date__c</fullName>
        <label>Activity Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B &amp; Q Div/Reg Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Store Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Huddles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock-take (General)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Audit (for managers only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar HO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work*With (for managers only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Curriculum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <description>Date of Call</description>
        <inlineHelpText>Enter planned or actual call date.</inlineHelpText>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Purpose__c</fullName>
        <label>Call Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_info__c</fullName>
        <label>Competitor Intel Gathered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Create_Training_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used for the batch process that will create training tasks when a curriculum task is created.  When set to true, the record will be included in the batch process.</description>
        <label>Create Training Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>Created for Plastikote; picklist used due to inability to create custom lookup fields on activity object</description>
        <label>Distributor</label>
        <picklist>
            <picklistValues>
                <fullName>Border Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bromborough Paints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco - Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Bolton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Burnley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Chesham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Dagenham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Ipswich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Leeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Newton Abbott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Perth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco –Rawtenstall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decco – Sheffield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hills DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Hardware – Barnstaple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Hardware – Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stax – Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stax – Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stax – Edinburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stax – Leeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stax – Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stax – Worsley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toolbank - (Curtis Holt-Northern)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toolbank - (Curtis Holt-North-west)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toolbank - Cwmbran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toolbank - Dartford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toolbank - Exeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toolbank - Finnie &amp; Co</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_in_Days__c</fullName>
        <formula>IF(IsAllDayEvent = TRUE, 1,
   IF(X1_2_Day_Event_AM__c = TRUE, 0.5,
      IF(X1_2_Day_Event_PM__c = TRUE, 0.5,
         IF(X1_4_Day_Event__c = TRUE, 0.25, 
            IF(X1_4_Day_Event_PM__c = TRUE, 0.25, NULL
               )
            )
          )
        )
     )</formula>
        <label>Duration in Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_in_Minutes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duration in Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Comments__c</fullName>
        <label>Event Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>Custom field for tracking activity status.  Created due to lack of status field for Events.</description>
        <label>Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Updates__c</fullName>
        <inlineHelpText>Include changes to forecast that should be shared.</inlineHelpText>
        <label>Forecast Updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Created for Plastikote</description>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>FDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twist and Spray</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Order_Value__c</fullName>
        <description>Consumer PK field to track value of order placed.  Accepts values up to 999,999.</description>
        <label>Order Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <inlineHelpText>Add any new info on Pricing.</inlineHelpText>
        <label>Pricing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <inlineHelpText>Enter products that were discussed.</inlineHelpText>
        <label>Products</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Centers__c</fullName>
        <label>Profit Centers</label>
        <picklist>
            <picklistValues>
                <fullName>Bev Ends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Cont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <inlineHelpText>Updates on Projects in process</inlineHelpText>
        <label>Projects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Activity_Type__c</controllingField>
            <picklistValues>
                <fullName>Aisle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment Topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet with Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom Topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Breakfast Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Instance__c</fullName>
        <label>Training Instance</label>
        <picklist>
            <controllingField>Activity_Type__c</controllingField>
            <picklistValues>
                <fullName>First-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <description>Training type</description>
        <label>Training Type</label>
        <picklist>
            <controllingField>Activity_Type__c</controllingField>
            <picklistValues>
                <fullName>Aisle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <formula>TEXT(Owner:User.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valspar_Attendees__c</fullName>
        <inlineHelpText>List Valspar attendees</inlineHelpText>
        <label>Valspar Attendees</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_2_Day_Event_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1/2 Day Event AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_2_Day_Event_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1/2 Day Event PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_4_Day_Event_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>B&amp;Q - 1/4 Store Visit PM</description>
        <label>1/4 Day Event PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_4_Day_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>B&amp;Q - Used to classify time for store visit.  Referenced in Apex Trigger and workflow rule validating that one duration checkbox be checked if Store Visit is the Activity Type selected.</description>
        <label>1/4 Day Event AM</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>B_Q_Region_1_Open_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>Event_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACTIVITY.TASK</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>B&amp;Q Region 1</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Waiting on someone else,Deferred</value>
        </filters>
        <label>B&amp;Q Region 1 Open Activities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_B_Q_BDM</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Cons_B_Q_Executives_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Region_2_Open_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>Event_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACTIVITY.TASK</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>B&amp;Q Region 2</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Waiting on someone else,Deferred</value>
        </filters>
        <label>B&amp;Q Region 2 Open Activities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_B_Q_BDM</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Cons_B_Q_Executives_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Region_3_Open_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>Event_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACTIVITY.TASK</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>B&amp;Q Region 3</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Waiting on someone else,Deferred</value>
        </filters>
        <label>B&amp;Q Region 3 Open Activities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_B_Q_BDM</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Cons_B_Q_Executives_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Region_4_Open_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>Event_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACTIVITY.TASK</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>B&amp;Q Region 4</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Waiting on someone else,Deferred</value>
        </filters>
        <label>B&amp;Q Region 4 Open Activities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_B_Q_BDM</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Cons_B_Q_Executives_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Region_5_Open_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>Event_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACTIVITY.TASK</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>B&amp;Q Region 5</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Waiting on someone else,Deferred</value>
        </filters>
        <label>B&amp;Q Region 5 Open Activities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_B_Q_BDM</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Cons_B_Q_Executives_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Region_6_Open_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>Event_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACTIVITY.TASK</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>B&amp;Q Region 6</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Waiting on someone else,Deferred</value>
        </filters>
        <label>B&amp;Q Region 6 Open Activities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_B_Q_BDM</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Cons_B_Q_Executives_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EPS_Sales_Calendar</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>EPS Sales Calendar</label>
        <sharedTo>
            <roleAndSubordinates>EPSExecutivesManagers</roleAndSubordinates>
            <roleAndSubordinates>EPSRepsSalesTechCS_NA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Event_Status__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Event_Comments__c</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>Activity_Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Activities1</fullName>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Event_Status__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Event_Comments__c</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>Activity_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>My Open Activities</label>
        <sharedTo>
            <group>ConsBQUsers</group>
            <roleAndSubordinatesInternal>Cons_B_Q_BDM</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Cons_B_Q_Executives_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Packaging_Trials</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.WHO_NAME</field>
            <operation>contains</operation>
            <value>Add Trial</value>
        </filters>
        <label>Packaging Trials</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>PackagingBUAdmin</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Region_Activities_Last_14_Days</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Event_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event.Cons_Lowes_Event</value>
        </filters>
        <label>All Region Activities - Last 14 Days</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_Lowes_BU_Admin</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_s_Open_Activities</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Event_Status__c</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Deferred</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Open Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>